# Engine

./: .gitattributes  .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
docs/: Todo.md  Vulkan.md
runtime/: editor.ui.ini  hammer.ui.ini
runtime/core/shaders/glsl/: triangle.vert
runtime/core/shaders/spirv/: README  teapot.frag  teapot.frag.spv  teapot.vert  teapot.vert.spv  triangle.vert.spv
shaders/: build.bat  build.sh  fs_cubes.glsl  fs_wireframe.glsl  varying.def.sc  vs_cubes.glsl
src/: meson.build
src/assets/: Asset.h  Assets.h
src/assets/import/: MeshOBJ.cpp
src/assets/loaders/: Textures.cpp
src/assets/models/: GLTF.cpp  GLTF.h
src/assets/models/importers/: OBJ.cpp  OBJ.h
src/common/: Common.h  Enum.h  Filesystem.h  Ranges.h  Reflection.h  String.h  Util.h
src/console/: ConCommand.h  ConVar.h  Console.h  ConsoleCommands.h
src/core/: GraphicsBuffer.h  IndexBuffer.h  Mesh.h  Primitives.cpp  Primitives.h  VertexBuffer.h  VertexLayout.h
src/editor/: Editor.cpp  Editor.h  Gizmos.h  Handles.h  Icons.h  Selection.h  Tools.cpp  Tools.h
src/editor/gui/: AssetBrowser.h  Inspector.h  Layout.h  Outline.h  SceneView.h  View3D.h
src/engine/: Engine.h  RenderSystem.h  System.h  Time.h
src/entity/: Behavior.h  Common.h  Component.h  Entity.h  Scene.h
src/entity/components/: Camera.h  MeshRenderer.h  Name.h  Transform.h
src/hammer/: Hammer.cpp  Hammer.h  KeyValues.h  VMF.h
src/hammer/gui/: Layout.h  Viewport.h
src/imgui/: Common.cpp  Common.h  ConsoleWindow.h  IconsMaterialCommunity.h  Window.h
src/imgui/impl/: imgui_impl_bgfx.cpp  imgui_impl_sdl.cpp
src/imgui/impl/fonts/: roboto_regular.ttf.h
src/input/: Input.h  InputMap.h  Keyboard.h  Mouse.h
src/main/: Main.cpp
src/math/: Color.h  Math.h  Matrix.h  Vector.h  Vector.inl
src/platform/: Cursor.h  Platform.h  Window.h
src/platform/gl/: WindowGL.cpp
src/platform/glfw/: WindowGLFW.cpp
src/platform/raylib/: Window.cpp
src/platform/sdl/: CursorSDL.cpp  WindowSDL.cpp
src/platform/win32/: PlatformWin32.cpp
src/render/: CommandBuffer.h  Render.h  RenderContext.h  RenderSystem.h  TextureFormat.h
src/render/bgfx/: RenderBGFX.cpp
src/render/core/: VertexBuffer.h
src/render/gl/: RenderGL.cpp
src/render/pipelines/: Forward.cpp  Forward.h  RenderPipeline.h
src/render/pipelines/forward/: Forward.cpp  Forward.h
src/render/raylib/: Render.cpp
src/render/vk/: RenderVK.cpp
src/tests/: test_vector.cpp
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
subprojects/: OOGL.wrap  imgui.wrap  sdl2.wrap
subprojects/packagefiles/OOGL/: deps.sh  meson.build
subprojects/packagefiles/imguizmo/: meson.build
subprojects/packagefiles/sdl2/: meson.build  meson_options.txt
tools/: icons.py  meta.py  rtti.py
